--- a/others.html
+++ b/others.html
@@ -102,7 +102,7 @@
                 <div class="col-md-5 no-padding">                
                   <div class="aa-promo-left">
                     <div class="aa-promo-banner">                    
-                      <img src="img/college/pussgrc.jpg" alt="img">                    
+                      <img src="img/college/uieth.jpg" alt="img">                    
                     </div>
                   </div>
                 </div>
@@ -110,17 +110,17 @@
                   <div class="aa-promo-right">
                     <div class="aa-single-promo-right">
                       <div class="aa-promo-banner">                      
-                        <img src="img/college/collegelogo.jfif" alt="img">                      
+                        <img src="img/college/uietblock.jpg" alt="img">                      
                       </div>
                     </div>
                     <div class="aa-single-promo-right">
                       <div class="aa-promo-banner">                      
-                        <img src="img/college/uiethoshiarpur.jpg" alt="img">                      
+                        <img src="img/college/library.jpg" alt="img">                      
                       </div>
                     </div>
                     <div class="aa-single-promo-right">
                       <div class="aa-promo-banner">                      
-                        <img src="img/college/engineeringblock.jpg" alt="img">                      
+                        <img src="img/college/auditorium.jpg" alt="img">                      
                       </div>
                     </div>
                     <div class="aa-single-promo-right">
