--- a/home.html
+++ b/home.html
@@ -638,7 +638,7 @@
           <div class="col-md-12">        
             <div class="row">
               <div class="aa-banner-area">
-                <a href="#"><img src="img/fashion-banner.jpg" alt="Banner img"></a>
+                <a href="#"><img src="img/bottom.jpg" alt="Banner img"></a>
               </div>
             </div>
           </div>
