--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <link rel="icon" type="image/jpg" href="img/favicon.jpg" sizes="32x32">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
-
    <style>
         html {
             font-family: Century Gothic, sans-serif;
@@ -59,8 +58,8 @@
             color: #ffffff;
         }
         .btn-danger:not(:disabled):not(.disabled).active, .btn-danger:not(:disabled):not(.disabled):active, .show>.btn-danger.dropdown-toggle {
-            color: #fff;
-            background-color: #031d82;
+            color: #031d82;
+            background-color: #ffffff;
             border-color: #031d82;
         }
         .container ul {
@@ -117,7 +116,6 @@
             background-color: #fff001;
         }
     </style>
-
     <body>
         <div class="container">
             <div class="vertext">
@@ -240,12 +238,5 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script>
-            var show = document.getElementById("pun");
-            show.style.display = none;
-            show.addEventListener("mouseover", function() {
-                show.style.display = block;
-            });
-        </script>
     </body>
 </html>
