slider images added

--- a/home.html
+++ b/home.html
@@ -209,7 +209,7 @@
             <ul class="seq-canvas">
               <li>
                 <div class="seq-model">
-                  <img data-seq class="texttyping" src="img/banner.jpg" alt="Company Banner img">
+                  <img data-seq class="texttyping" src="img/slider/banner.jpg" alt="Company Banner img">
                   <div class="typewriter">
                     <h1>&ldquo;Yeh Hai College Ki Dukaan!&rdquo;</h1>
                   </div>
@@ -220,21 +220,17 @@
               </li>
               <li>
                 <div class="seq-model">
-                  <img data-seq src="img/categoriesbanner.jpg" alt="Slide img">
+                  <img data-seq src="img/slider/categoriesbanner.jpg" alt="Slide img">
                 </div>
               </li>
               <li>
                 <div class="seq-model">
-                  <img data-seq src="img/slider/3.jpg" alt="Slide img">
-                </div>
-                <div class="seq-title">
-                  <h2 data-seq>Products</h2>                
-                  <p data-seq>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, illum.</p>
+                  <img data-seq src="img/slider/salebanner.jpg" alt="Slide img">
                 </div>
               </li>         
               <li>
                 <div class="seq-model">
-                  <img data-seq src="img/donatebanner.jpg" alt="Slide img">
+                  <img data-seq src="img/slider/donatebanner.jpg" alt="Slide img">
                 </div>
               </li>
             </ul>
