--- a/others.html
+++ b/others.html
@@ -89,7 +89,7 @@
    
     <!-- Catg Header Banner Section -->
     <section id="aa-catg-head-banner">
-      <img src="img/college/collegebanner.png" alt="banner img">
+      <img src="img/collegebanner.jpg" alt="banner img">
     </section>
 
     <!-- Photos -->
